--- a/app/views/global_preferences/index.html.haml
+++ b/app/views/global_preferences/index.html.haml
@@ -2,11 +2,13 @@
   %tr{:class => cycle("odd", "even")}
     %th name
     %th value
+    %th ttl
     %th commands
   - @global_preferences.each do |pref|
     %tr{:class => cycle("odd", "even")}
       %td= pref.name
       %td= pref.value
+      %td= pref.ttl
       %td!= link_to "edit", edit_global_preference_path(pref)
 
 != link_to "add new variable", new_global_preference_path
