--- a/app/views/global_preferences/index.html.haml
+++ b/app/views/global_preferences/index.html.haml
@@ -1,16 +1,16 @@
 %table
-  %tr{:class => cycle("odd", "even")}
+  %tr
     %th name
     %th value
     %th ttl
     %th commands
   - @global_preferences.each do |pref|
-    %tr{:class => cycle("odd", "even")}
+    %tr{:style => cycle("", "background:#EEE", :name => :tr_style)}
       %td= pref.name
       %td= pref.value
       %td= pref.ttl
       %td
         != link_to "edit", edit_global_preference_path(pref)
-        != link_to "delete", global_preference_path(pref), :method => :delete
+        != link_to "delete", global_preference_path(pref), :method => :delete, :confirm => "are you sure you want to delete '#{pref.name}'"
 
 != link_to "add new variable", new_global_preference_path
